# tonic

./: Cargo.toml  Makefile  README.md  runner
benches/js/: sink.js
benches/tonic/: sink.tn
crates/js-builder/: Cargo.toml
crates/tonic/: Cargo.toml  package-lock.json  package.json
crates/tonic-compiler/: Cargo.toml
crates/tonic-compiler/src/: compiler.rs  lib.rs
crates/tonic-js-builder/: Cargo.toml
crates/tonic-js-builder/src/: builder.rs  expression.rs  function.rs  if_else.rs  lib.rs  var.rs  while.rs
crates/tonic-parser/: Cargo.toml
crates/tonic-parser/src/: expression.rs  lexer.rs  lib.rs  parser.rs  statement.rs  token.rs  type.rs
crates/tonic-parser/src/passes/: mod.rs
crates/tonic/js/: polyfill.js  tmpl.js  web.js
crates/tonic/src/: main.rs  polyfill.js
examples/: array-append.tn  array.tn  bool.tn  break.tn  closure-with-clashes.tn  closures.tn  conditionals.tn  fib.tn  fn.tn  hello_world.tn  hoisting.tn  if.tn  iife.tn  let.tn  loops.tn  maps.tn  math.tn  mod.tn  nested-fns.tn  prefix.tn  returns.tn  short-closure.tn  sink.tn  stdin.tn  string-indexing.tn  test.js  type-checking.tn  unexpected-token.tn  uses.tn  while.tn
examples/aoc/2020/: day-1.tn
examples/aoc/2020/day-1/: part-1.tn  part-2.tn
examples/aoc/2020/day-2/: part-1.tn  part-2.tn
examples/aoc/2020/day-3/: part-1.tn  (+1 more)
examples/std/: env.tn  http.tn  json.tn  tmpl.tn  token.tn  uuid.tn  web.tn
examples/std/tmpls/: index.html
src/: code.rs  compiler.rs  expression.rs  lexer.rs  lib.rs  main.rs  parser.rs  statement.rs  type.rs  value.rs  vm.rs
src/js/: mod.rs
tonic-intellisense/: CHANGELOG.md  README.md  package.json  snippets.json  vsc-extension-quickstart.md
tonic-intellisense/syntaxes/: tonic.tmLanguage.json
(+4 files in other folders)
