[package]
name = "tonic-compiler"
version = "0.3.0"
edition = "2021"
description = "The Tonic Programming Language JavaScript Compiler"
license = "MIT"

[dependencies]
tonic-parser = { path = "../tonic-parser", version = "0.3.0" }
tonic-js-builder = { path = "../tonic-js-builder", version = "0.3.0" }