[package]
name = "tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-compiler = { path = "../tonic-compiler" }
rquickjs = { version = "0.1.3", features = ["macro", "classes"] }
structopt = "0.2"
rustyline = "9.0.0"
uuid = { version = "0.8", features = ["v4"] }