[package]
name = "tonic-cli"
version = "0.3.0"
edition = "2021"
description = "The Tonic Programming Language"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic-compiler = { path = "../tonic-compiler", version = "0.3.0" }
rquickjs = { version = "0.1.3", features = ["macro", "classes", "doc-cfg", "loader"] }
structopt = "0.2"
rustyline = "9.0.0"
uuid = { version = "0.8", features = ["v4"] }
tiny_http = "0.9" 